<resources>


    <!-- FOR THE MAIN ACTIVITY AND ITS MENU -->
    <string name="app_name">KalahariEye</string>
    <string name="show_next_shot">Show Next Shot</string>
    <string name="live_mode">Live Mode</string>
    <string name="shooting_mode">Shooting Mode</string>
    <string name="main_image_desc">Main Image of the app</string>
    <string name="side_panel_image">Image that will be in the side panel, previous shots</string>
    <string name="refresh_btn">The video refresh button</string>
    <string name="show_next_menu">Show Next</string>
    <string name="about_us_menu">About Us</string>
    <string name="exit_menu">Exit</string>
    <string name="save_session_menu">Save Session</string>
    <string name="new_session_menu">New Session</string>


    <!-- FOR THE ABOUT US PAGE -->
    <string name="title_activity_abous_us">About Us</string>
    <string name="about_us_text">Please feel free to contact us directly about any suggestions or issues you have with the application.</string>
    <string name="cell_number"> Cell: +27 76 702 9675</string>
    <string name="email">Email: andreas409@gmail.com</string>

    <string name="menu_settings">Settings</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
